# django-wrapwith

./: LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  pypi.yaml
scripts/: check  lint  test
tests/: settings.py  tests.py
tests/templates/: alias.html  alias_with_dots.html  arguments.html  nested.html  simple.html
tests/templates/wrappers/: divwithargonly.html
wrapwith/templatetags/: wrapwith.py
wrapwith/tests/: settings.py  tests.py
wrapwith/tests/templates/: only.html
wrapwith/tests/templates/wrappers/: div.html  divwitharg.html
